--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta
+        <meta charset="UTF-8">
+        <meta name="description" content="Learning HTML">
         <title>Akshay's Website</title>
     </head>
     <body>
-        Hello World
+        <h2>Akshay's Website</h2>
+        <p>This is my <b>paragraph</b></p>
+        <p>Here's my other <i>paragraph</i></p>
+        <p>Here's my <b><i>third one</i></b>.</p>
     </body>
 </html>
