--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Learning HTML">
-        <title>Akshay's Website</title>
+        <title>Icebreaker Project</title>
     </head>
     <body>
-        <h2>Akshay's Website</h2>
-        <p>This is my <b>paragraph</b></p>
-        <p>Here's my other <i>paragraph</i></p>
-        <p>Here's my <b><i>third one</i></b>.</p>
+        <h1>Akshay Rajaram</h1>
+        <hr/>
+
+        <h2>About Me:</h2>
+        <p><b>Hometown:</b> Chester Springs</p>
+        <p><b>University:</b> Temple University</p>
+        <p><b>Major:</b> Computer Science</p>
+        <p><b>Favorite Programming Language:</b> Java</p>
+        <p><b>Favorite Mobile App:</b> Snapchat</p>
+        <p><b>Favorite Vacation Spot:</b> NYC</p>
+        <p><b>Favorite Food:</b> Pizza</p>
+        <img src="my_image.jpg" height = "300" width="300"  align="right">
+
     </body>
 </html>
